--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Peter Parker Website</title>
+    <title>MBG Website</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,41 +12,46 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span>Peter Parker</span> World</h1>
-            <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-            <a class="anchor-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
+            <h1><span>Muhammet Burak Göleç</span> World</h1>
+            <!-- <h3>Build Climber and Train Stopper</h3> -->
+            <!-- <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p> -->
+            <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/muhammet-burak-golec/">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/burak-1.jpeg" alt="">
         </div>
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
+            <img src="images/pic1.jpg" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
-            <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="anchor-button" href="">DOWNLOAD RESUME</a>
+            <h3>Become a DevSecOps</h3>
+            <p>.</p>
         </div>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
     <section class="experience-area">
         <h2>Experiences</h2>
         <div class="half-width" id="full-stack">
-            <h2>Full Stack Web Developer</h2>
-            <h3>2021-Present | Pro Level Developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            <h2>DevOps Engineer</h2>
+            <h3>2023-Present </h3>
+            <p>.</p>
         </div>
         <div class="half-width" id="baby-web">
-            <h2>Baby Web Developer</h2>
-            <h3>2020-2021 | Programming Hero Learner</h3>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            <h2>Junior Penetration Tester</h2>
+            <h3>2022-2023 </h3>
+            <p>.</p>
         </div>
     </section>
+
     <footer>
-        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+        <p>© Muhammet Burak Göleç 2024-2029, DevOps Engineer.</p>
     </footer>
+        
 </body>
 </html>
